	* iRO information gathering.
	* Kafra maintainment.
	* Taking requests.
Musashiden
	*Scripting iRO latest towns (warps, NPCs, ect.)
	*iRO information gathering.
Playtester
	* Monsters spawn, warps maintainment
KarLaeda
	* Fixing bugs
	* Adding new NPC


== Changelog ==

Date		Added
======
2007/03/01
	* The Sign: Fixed possible exploit, thanks to happylight [Lupus]
2007/02/28
	* Fixes to Merchant/Smith skill quests according to ragnainfo wiki [DracoRPG]
	- Added missing 1 Banana Juice requirement to Cart Revolution quest
	- Fixed the weight condition for Greed quest : you have to carry so much that
	  you can't hold 500 more, whereas eA wanted you to be able to hold 500 more
	* Fixed 2 questions in Rasputin's test, thanks to vvCC [Lupus]
2007/02/27
	* Added alternate bonus item to Alchemist Quest, thanks to b3nn0 [Lupus]
	- Made Dancer Quest bonus item to be give as in other quests
	- Updated Deviruchi-divorcer (we can't divorce offline chars..) + added proper effects
2007/02/22
	* Added official Hugel Cool Event Corp. Staff, thanks to Gepard [Lupus]
2007/02/21
	* Fixed a parenthesis typo in the dance quest [ultramage]
	* Dancer Job Quest v 3.0. Optimized, fixed typos, added missing dialogues [Lupus]
		- not fully tested yet! U can use v2.5 as 100% working
	- Moved NPC Master Kavaruk (overlapped Phantasmic Arrow Skill quest NPC)
	- The Sign Quest, minor dialogue fix, thanks to theultramage 
	- Fixed JobMaster Baby -> Super Baby change bug
	* Fixed and Tested Dancing part of Dancer Job Quest (the rest chrid issues) [Lupus]
2007/02/19
	* Fixed Dancer Job Quest mob::OnDie / SP check issues [Lupus]
	* Guilds with Emergency Call skill mastered or with 9+ skill points [Lupus]
		can't take part in Novice Castles WoE. 
2007/02/16
	* Updated the Dancer job quest to attach a player to the main timer script.
	* Updated WoE scripts since the "guardian" script command no longer has a
	  "amount" argument. [Skotlex]
2007/02/15